--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 {% load url from future %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,70 +32,72 @@
     <![endif]-->
     {% block extra_head %}
     {% endblock extra_head %}
-  </head>
+</head>
 
-  <body>
+<body>
 
-      <!-- Static navbar -->
-      <div class="navbar navbar-inverse" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+<!-- Static navbar -->
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">RealSharps</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+        </button>
+        <a class="navbar-brand" href="#">RealSharps</a>
+    </div>
+    <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li><a href="#">Sports Picks</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Scores and Odds <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">NFL</a></li>
-                <li><a href="#">NCAAFB</a></li>
-                <li><a href="#">NBA</a></li>
-                <li><a href="#">NCAAMB</a></li>
-                <li><a href="#">MLB</a></li>
-                <li><a href="#">NHL</a></li>
-              </ul>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Scores and Odds <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">NFL</a></li>
+                    <li><a href="#">NCAAFB</a></li>
+                    <li><a href="#">NBA</a></li>
+                    <li><a href="#">NCAAMB</a></li>
+                    <li><a href="#">MLB</a></li>
+                    <li><a href="#">NHL</a></li>
+                </ul>
             </li>
             <li><a href="#">FAQs</a></li>
             <li><a href="#">Contact</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-          {% if user.is_authenticated %}
-            <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.email }}<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="{% url 'account_email' %}">Change E-mail Address</a></li>
-                <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
-            </ul>
-            </li>
-        {% else %}
-            <li><a href="{% url 'account_login' %}">Sign In</a></li>
-            <li><a href="{% url 'account_signup' %}">Create Account</a></li>
-        {% endif %}
-        </div><!--/.nav-collapse -->
-      </div>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            {% if user.is_authenticated %}
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.email }}<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{% url 'account_email' %}">Change E-mail Address</a></li>
+                        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
+                    </ul>
+                </li>
+            {% else %}
+                <li><a href="{% url 'account_login' %}">Sign In</a></li>
+                <li><a href="{% url 'account_signup' %}">Create Account</a></li>
+            {% endif %}
+    </div><!--/.nav-collapse -->
+</div>
 
+<div class="container">
     {% if messages %}
-    <div class="alert alert-danger">
-      <strong>Error:</strong>
-      <ul>
-	{% for message in messages %}
-	<li>{{message}}</li>
-	{% endfor %}
-      </ul>
-    </div>
+        <div class="alert alert-danger">
+            <strong>Error:</strong>
+            <ul>
+                {% for message in messages %}
+                    <li>{{message}}</li>
+                {% endfor %}
+            </ul>
+        </div>
     {% endif %}
 
 
-  {% block content %}
-  {% endblock %}
-  {% block extra_body %}
-  {% endblock extra_body %}
-  </body>
+    {% block content %}
+    {% endblock %}
+    {% block extra_body %}
+    {% endblock extra_body %}
+</div>
+</body>
 </html>
