--- a/templates/lbforum/account/user_topics.html
+++ b/templates/lbforum/account/user_topics.html
@@ -20,7 +20,7 @@
             <div class="crumbs gen-content" id="brd-crumbs-top">
                 <p>
                     <span class="crumb crumbfirst">
-                        <a href="{% url lbforum_index %}">{{ LBFORUM_TITLE }}</a>
+                        <a href="{% url 'lbforum_index' %}">{{ LBFORUM_TITLE }}</a>
                     </span> 
                     <span class="crumb crumblast">
                         <span>&raquo;</span>
@@ -63,7 +63,7 @@
             <div class="crumbs gen-content" id="brd-crumbs-end">
                 <p>
                     <span class="crumb crumbfirst">
-                        <a href="{% url lbforum_index %}">{{ LBFORUM_TITLE }}</a>
+                        <a href="{% url 'lbforum_index' %}">{{ LBFORUM_TITLE }}</a>
                     </span> 
                     <span class="crumb crumblast">
                         <span>&raquo;</span>
