--- a/templates/base.html
+++ b/templates/base.html
@@ -54,12 +54,12 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Scores and Odds <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">NFL</a></li>
-                    <li><a href="#">NCAAFB</a></li>
-                    <li><a href="#">NBA</a></li>
-                    <li><a href="#">NCAAMB</a></li>
-                    <li><a href="#">MLB</a></li>
-                    <li><a href="#">NHL</a></li>
+                    <li><a href="{% url 'sport_list' pk=1 %}">NFL</a></li>
+                    <li><a href="{% url 'sport_list' pk=2 %}">NBA</a></li>
+                    <li><a href="{% url 'sport_list' pk=3 %}">MLB</a></li>
+                    <li><a href="{% url 'sport_list' pk=4 %}">NHL</a></li>
+                    <li><a href="{% url 'sport_list' pk=5 %}">NCAAF</a></li>
+                    <li><a href="{% url 'sport_list' pk=6 %}">NCAAMB</a></li>
                 </ul>
             </li>
             <li><a href="#">FAQs</a></li>
