--- a/templates/base.html
+++ b/templates/base.html
@@ -45,12 +45,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">RealSharps</a>
+        <a class="navbar-brand" href="/">RealSharps</a>
     </div>
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="#">Sports Picks</a></li>
+            <li><a href="{% url 'pick_list' %}">Sports Picks</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Scores and Odds <b class="caret"></b></a>
                 <ul class="dropdown-menu">
