--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css">
     <link href="/static/style.css" rel="stylesheet">
 
 
@@ -30,6 +31,9 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    {% block javascript %}
+    <!--test-->
+    {% endblock javascript %}
     {% block extra_head %}
     {% endblock extra_head %}
 </head>
