--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,8 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css">
+    <link href="/static/bootflat.css" rel="stylesheet">
+    <link href="/static/site.min.css" rel="stylesheet">
     <link href="/static/style.css" rel="stylesheet">
 
 
@@ -54,6 +54,7 @@
     <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
+            <li><a href="{% url 'pybb:index' %}">Forum</a></li>
             <li><a href="{% url 'pick_list' %}">Sports Picks</a></li>
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Scores and Odds <b class="caret"></b></a>
@@ -67,7 +68,7 @@
                 </ul>
             </li>
             <li><a href="{% url 'faq' %}">FAQs</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="{% url 'contact' %}">Contact</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             {% if user.is_authenticated %}
@@ -104,5 +105,29 @@
     {% block extra_body %}
     {% endblock extra_body %}
 </div>
+{% block footer %}
+
+<div class="col-md-12">
+    <div class="clearfix">
+        <div class="footer">
+            <div class="container">
+                <dl class="footer-nav">
+                    <dt class="nav-title">Contact</dt>
+                    <dd class="nav-item">Email: sales@realsharpslounge.com</dd>
+                </dl>
+                <dl class="footer-nav">
+                    <dt class="nav-title">Forums</dt>
+                    <dd class="nav-item"><a href="#">NBA</a></dd>
+                    <dd class="nav-item"><a href="#">NFL</a></dd>
+                    <dd class="nav-item"><a href="#">MLB</a></dd>
+                    <dd class="nav-item"><a href="#">NHL</a></dd>
+                    <dd class="nav-item"><a href="#">NCAAF</a></dd>
+                    <dd class="nav-item"><a href="#">NCAAMB</a></dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock footer %}
 </body>
 </html>
