--- a/templates/cappers/index.html
+++ b/templates/cappers/index.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="container">
-        <div class="row">
-        <img src="/static/large_stadium_large.jpg" alt="realsharps.com" />
+        <div class="row text-center">
+        <img src="/static/lounge.jpg" alt="realsharps.com" />
     </div>
         <div class="row">
             <div class="col-md-3">
